--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-gauge-chart": "^0.5.1",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
