--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartgrow-frontend",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "SmartGrow is a smart home solution for your greenhouse.",
   "author": "SmartGrow Frontend Team",
   "license": "N/A",
@@ -19,7 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.64",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
