--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "docs": "jsdoc -c jsdoc.json",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint ."
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -25,13 +26,16 @@
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.26.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.4.1",
     "docdash": "^2.0.2",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
+    "globals": "^16.1.0",
     "jsdoc": "^4.0.4",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
