--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "docdash": "^2.0.2",
     "eslint": "^9.26.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
     "globals": "^16.1.0",
