--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
     "globals": "^16.1.0",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.4",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
