--- a/.github/workflows/prettier-check.yml
+++ b/.github/workflows/prettier-check.yml
@@ -21,4 +21,4 @@ jobs:
         run: npm ci
 
       - name: Run Prettier check
-        run: npx prettier . --check
+        run: npx prettier . --write
