--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "prettier": "^3.5.3",
     "vite": "^6.3.3",
     "vitest": "^3.1.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
