--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.4.1",
+    "cypress": "^14.3.3",
     "docdash": "^2.0.2",
     "eslint": "^9.26.0",
     "eslint-plugin-jest": "^28.11.0",
