--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,15 @@ jobs:
       - name: Run Linter
         run: npm run lint
 
-      - name: Run Test   
+      - name: Run Test
         run: npm test
 
       - name: Build Project
         run: npm run build
+
+      - name: Run Cypress Tests (headless)
+        uses: cypress-io/github-action@v6
+        with:
+          start: npm start
+          wait-on: http://localhost:3000
+          wait-on-timeout: 60 # seconds
