--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "jest --coverage",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:run:local": "start-server-and-test dev http://localhost:3000 cy:run"
   },
   "dependencies": {
     "axios": "^1.9.0",
