--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cypress": "^14.3.3",
     "docdash": "^2.0.2",
     "eslint": "^9.26.0",
+    "eslint-plugin-cypress": "^4.3.0",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
