--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.5.1",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
