--- a/package.json
+++ b/package.json
@@ -14,24 +14,20 @@
     "test:ui": "vitest --ui",
     "test:coverage": "jest --coverage",
     "lint": "eslint .",
-    "start": "react-scripts start"
+    "start": "react-scripts start",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:run:local": "start-server-and-test dev http://localhost:3000 cy:run"
-
   },
   "dependencies": {
-    "20": "^3.1.9",
     "axios": "^1.9.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.64",
     "react-router-dom": "^7.5.2",
     "react-scripts": "^5.0.1"
-    "react-gauge-component": "^1.2.64",
-    "react-router-dom": "^7.5.2"
-
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
