--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "jest --coverage",
     "lint": "eslint .",
-    "start": "react-scripts start",
+    "start": "vite",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:run:local": "start-server-and-test dev http://localhost:3000 cy:run"
@@ -26,8 +26,7 @@
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.5.1",
     "react-gauge-component": "^1.2.64",
-    "react-router-dom": "^7.5.2",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
