--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cy:run:local": "start-server-and-test dev http://localhost:3000 cy:run"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
