--- a/package.json
+++ b/package.json
@@ -48,11 +48,17 @@
     "globals": "^16.1.0",
     "jsdoc": "^4.0.4",
     "jsdom": "^26.1.0",
+    "msw": "^2.8.4",
     "prettier": "^3.5.3",
     "vite": "^6.3.3",
     "vitest": "^3.1.3"
   },
   "jest": {
     "testEnvironment": "jsdom"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
