--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-gauge-component": "^1.2.64",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
