--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsdom": "^26.1.0",
     "msw": "^2.8.4",
     "prettier": "^3.5.3",
+    "sinon": "^20.0.0",
     "vite": "^6.3.3",
     "vitest": "^3.1.3"
   },
